--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       context: .
     init: true
     restart: unless-stopped
+    env_file: .env
     depends_on:
       - tunnel
     volumes:
