--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "title": "Accessible Telecoms"
   },
   "scripts": {
-    "start:development": "npx at-demo -p 8000 -w 4 -e development",
+    "start:development": "ACCESS_TOKEN=access123 npx at-demo -p 8000 -w 4 -e development",
     "docker:build": "docker build -t at-demo:latest .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "npm-watch start:development"
